fix layout alignment

--- a/css/style.css
+++ b/css/style.css
@@ -44,14 +44,12 @@ h3 {
 #portfolio-section {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
     justify-content: center;
 }
 
 #savage {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
     justify-content: center;
 }
 
